--- a/docs/game.css
+++ b/docs/game.css
@@ -1,5 +1,3 @@
-/* Frank Poth 02/28/2018 */
-
 * { box-sizing:border-box; margin:0; padding:0; }
 
 html { height:100%; width:100%; }
@@ -16,45 +14,10 @@ body {
 
 }
 
-/* 04/07/2018 */
-
-canvas { image-rendering:pixelated; }
-
-#menu {
-
-  background-color:rgba(0, 0, 0, 0.5);
-  color:#ffffff;
-  cursor:pointer;
-  display:grid;
-  max-height:100%;
-  overflow-y:auto;
-  padding:8px;
-  position:fixed;
-  right:0px;
-  top:0px;
-  user-select:none;
-
-  -webkit-tap-highlight-color:transparent;
-
-}
-
-#menu p {
-
-  color:#ffffff;
-  font-size:2.0em;
-
-}
-
-#menu-list {
-
-  display:none;
-
-}
-
-#menu-list a {
-
-  color:#ffffff;
-  font-size:1.5em;
-  text-decoration:none;
-
+.restart-button {
+  color:#FFFFFF; 
+  font-size:100px; 
+  position:fixed; 
+  font-family: 'Chelsea Market', cursive; 
+  display: block;
 }
